# rediserve

./: .gitignore  BRANCH_NAMING_CONVENTIONS.md  Cargo.toml  README.md
.github/workflows/: build-and-release.yml
docs/: bun.lockb  docusaurus.config.ts  package.json
docs/docs/: config.md  installation.md  intro.md  usage.md  why.md
docs/static/: install.sh
src/: cmd.rs  config.rs  lib.rs  main.rs  state.rs  web.rs
src/middleware/: auth_check.rs  logging.rs  mod.rs
src/models/: api_error.rs  api_input_data.rs  api_response.rs  api_types.rs  argument.rs  command.rs  incoming_data.rs  mod.rs  multi_api_input_data.rs  pipeline_input_data.rs  response_builder.rs
src/routes/: app_route.rs  mod.rs  pipeline_route.rs  redis_route.rs  redis_routes.rs  transaction_route.rs
src/services/: command_service.rs  mod.rs
src/utils/: app_setup.rs  mod.rs  redis_to_json.rs
tests/: transaction_route_test.rs
