[package]
name = "rediserve"
version = "0.1.0"
edition = "2021"
authors = ["Karan Jadhav <karan@jadhav.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
clap = { version = "4.4.18", features = ["derive"] }
deadpool-redis = "0.14.0"
dotenv = "0.15.0"
futures = "0.3.30"
redis = { version = "0.24.0", features = ["tokio-comp"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
